...
  const editorFields = (
    <>
      {showQuestionEditor && (
        <MarkdownEditorField
          editor={questionEditor}
          placeholder={questionPlaceholder}
          testID="flashcard-form-question-input"
          error={questionError}
          onFocus={() => onEditorFocus('question')}
          onBlur={() => onEditorBlur('question')}
          isMarkdownEditorFocused={isMarkdownEditorFocused}
        />
      )}
...
