...
      }}
    >
      <Tabs.Screen
        name="index"
        options={{
          title: t('tab.decks'),
          tabBarButtonTestID: 'tab-decks',
          tabBarAccessibilityLabel: 'tab-decks',
          tabBarIcon: ({ color }) => (
            <IconSymbol size={28} name="rectangle.stack.fill" color={color} />
          ),
        }}
      />
...
