...
        width: '100%',
        maxWidth: 340,
        borderRadius: 24,
        zIndex: 1001,
        alignSelf: useModal ? 'center' : undefined,
      }}
      testID="app-alert-content"
    >
      <YStack gap="$3">
        <AlertDialog.Title size="$6" testID="app-alert-title">
          {config.title}
        </AlertDialog.Title>
        <AlertDialog.Description size="$3" color="$secondary" testID="app-alert-message">
...
