appId: com.deploynk.flashcards
---
- tapOn:
    text: 'E2E Standard Flashcard Question'
- assertVisible:
    id: flashcard-form-screen
- tapOn:
    id: flashcard-form-question-input
- runFlow:
    when:
        platform: Android
    commands:
        - tapOn:
            point: 5%,15%
- runFlow:
    when:
        platform: iOS
    commands:
        - tapOn:
            point: 5%,17%
- inputText: '## Title '
- tapOn:
    id: flashcard-form-keyboard-done-button
- tapOn:
    id: flashcard-form-save-button
- assertVisible:
    id: deck-detail-screen
- assertVisible: 'Title E2E Standard Flashcard Question'
