appId: com.deploynk.flashcards
---
- tapOn:
    id: settings-item-reset-data
- assertVisible:
    id: reset-data-screen
- tapOn:
    id: reset-data-confirm-button
- tapOn:
    id: app-alert-button-destructive-1
- assertVisible:
    id: app-alert-content
- tapOn:
    id: app-alert-button-default-0
- tapOn:
    id: header-back-button

- runFlow:
    when:
      visible:
        id: tab-decks
    commands:
      - tapOn:
          id: tab-decks
- runFlow:
    when:
      visible:
        id: sidebar-tab-decks
    commands:
      - tapOn:
          id: sidebar-tab-decks
- assertVisible:
    id: home-screen
- assertVisible:
    id: home-empty-state
