appId: com.deploynk.flashcards
---
- tapOn:
    id: settings-item-reset-stats
- assertVisible:
    id: reset-stats-screen
- tapOn:
    id: reset-stats-confirm-button
- assertVisible:
    id: app-alert-content
- tapOn:
    id: app-alert-button-cancel-0
- tapOn:
    id: reset-stats-confirm-button
- tapOn:
    id: app-alert-button-destructive-1
- assertVisible:
    id: app-alert-content
- tapOn:
    id: app-alert-button-default-0
- tapOn:
    id: header-back-button
- assertVisible:
    id: settings-screen
