appId: com.deploynk.flashcards
---
- tapOn:
    id: settings-item-export
- assertVisible:
    id: export-screen
- assertVisible: Imported E2E Deck
- tapOn:
    id: header-back-button
- assertVisible:
    id: settings-screen
