appId: com.deploynk.flashcards
---
- tapOn:
    id: settings-item-info
- assertVisible:
    id: info-screen
- tapOn:
    id: header-back-button
- assertVisible:
    id: settings-screen
